Simplify.  Handle draining of vc[0] differently.

Addresses PR kern/51710 audio playback works only once.